tests/fail/mac8.rs
use const_addrs::mac8;

fn main() {
    let _ = mac8!("ca:fe:ca:fe:ca:fe");
}
